--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
     "express": "^4.17.2",
     "node": "^17.3.0",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.1"
-  }
+    "pg": "^8.7.1",
+    "bower":"^1.8.0",
+    "grunt":"^1.0.1"
+  },
+   "scripts": {
+    "start": "node ./www.js",
+    "build": "grunt dist",
+    "postinstall": "./node_modules/bower/bin/bower install && npm run build",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+   }
 }
