--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pg": "^8.7.1"
   },
    "scripts": {
-    "start": "node ./www.js",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "start": "node ./www.js"
+
    }
 }
